tests/baselines/reference/boolInsteadOfBoolean.errors.txt
==== tests/cases/compiler/boolInsteadOfBoolean.ts (1 errors) ====
    var x: bool;
           ~~~~
!!! boolInsteadOfBoolean.ts(1,8): error TS2095: Could not find symbol 'bool'.
    var a: boolean = x;
    x = a;